--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,62 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Nunito:ital,wght@0,400;0,700;1,400&display=swap');
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-html{
-    font-size: 130%;
-}
 body{
     background-color: #333;
-    background-image: url('./assets/carbon-fibre.png');
+    background-image: url('./assets/tb.png') !important;
     background-repeat: repeat;
-}
-.app{
-    width: 100%;
-    max-width: 620px;
-    margin: 0 auto;
-    padding: 0rem 1rem;
-    --title-font:'Lobster', cursive;
-    --text-font: 'Nunito', sans-serif;
-    --font-color: #F1F1F1;
-    margin-top: 2rem;
-    
-}
-.title{
-    font-family: var(--title-font);
-}
-@keyframes slideLeft {
-    from{
-        opacity: 0;
-        transform: translateX(-30px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-@keyframes shake{
-    0%{
-        transform: rotate(10deg);
-    }
-    50%{
-        transform: rotate(-10deg);
-    }
-    100%{
-        transform: rotate(10deg);
-    }
-}
-
-@keyframes writingEffect {
-    0%{
-        opacity: 1;
-    }
-    50%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
 }
